--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ h1{
     background-color: bisque;
     color: blue;
 }
+p{
+    background-color:aqua;
+    color: darkblue;
+    font-size: 20px;
+}
